fixed button not horizontal align on mobile

--- a/docs/_sass/jekyll-theme-cayman.scss
+++ b/docs/_sass/jekyll-theme-cayman.scss
@@ -584,7 +584,7 @@ a {
     position: fixed;
     flex-wrap: wrap;
     top: 0;
-    align-items: center;
+    align-items: right;
 
      /*!
 
@@ -602,7 +602,7 @@ a {
   .menu ul{
     display: block;
     float: right;
-    margin-left: auto;
+    /*margin-left: auto;*/
     /*vertical-align: middle;*/
     list-style: none;
     z-index: 999;
